--- a/src/resources/views/pages/admin/create-product.ejs
+++ b/src/resources/views/pages/admin/create-product.ejs
@@ -55,7 +55,7 @@
                     <div class="col-lg-4 col-md-4 col-12">
                         <div class="top-middle">
                             <ul class="useful-links">
-                                <li><a href="index.html">Home</a></li>
+                                <li><a href="/">Home</a></li>
                                 <li><a href="about-us.html">About Us</a></li>
                                 <li><a href="contact.html">Contact Us</a></li>
                             </ul>
@@ -72,10 +72,10 @@
 
                             <ul class="user-login <%if(user==null){%><%=user%><%}else{%>hidden<%};%>">
                                 <li >
-                                    <a href="./login.html">Sign In</a>
+                                    <a href="/login">Sign In</a>
                                 </li>
                                 <li>
-                                    <a href="./register.html">Register</a>
+                                    <a href="/register">Register</a>
                                 </li>
                             </ul>
                             <ul class="user-login <%if(user!=null){%><%=user%><%}else{%>hidden<%};%>">
@@ -83,7 +83,7 @@
                                     <a href="#">Hello, <%=user%></a>
                                 </li>
                                 <li >
-                                    <a href="./index.html">Logout</a>
+                                    <a href="/logout">Logout</a>
                                 </li>
                                 
                             </ul>
@@ -99,7 +99,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-3 col-md-3 col-7">
                         <!-- Start Header Logo -->
-                        <a class="navbar-brand" href="index.html">
+                        <a class="navbar-brand" href="/">
                             <img src="/images/logo/logo.svg" alt="Logo">
                         </a>
                         <!-- End Header Logo -->
