--- a/src/resources/views/pages/product-detail.ejs
+++ b/src/resources/views/pages/product-detail.ejs
@@ -53,7 +53,7 @@
                     <div class="col-lg-4 col-md-4 col-12">
                         <div class="top-middle">
                             <ul class="useful-links">
-                                <li><a href="index.html">Home</a></li>
+                                <li><a href="/">Home</a></li>
                                 <li><a href="about-us.html">About Us</a></li>
                                 <li><a href="contact.html">Contact Us</a></li>
                             </ul>
@@ -70,10 +70,10 @@
 
                             <ul class="user-login <%if(user==null){%><%=user%><%}else{%>hidden<%};%>">
                                 <li >
-                                    <a href="./login.html">Sign In</a>
+                                    <a href="/login">Sign In</a>
                                 </li>
                                 <li>
-                                    <a href="./register.html">Register</a>
+                                    <a href="/register">Register</a>
                                 </li>
                             </ul>
                             <ul class="user-login <%if(user!=null){%><%=user%><%}else{%>hidden<%};%>">
@@ -81,7 +81,7 @@
                                     <a href="#">Hello, <%=user%></a>
                                 </li>
                                 <li >
-                                    <a href="./index.html">Logout</a>
+                                    <a href="/logout">Logout</a>
                                 </li>
                                 
                             </ul>
@@ -97,7 +97,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-3 col-md-3 col-7">
                         <!-- Start Header Logo -->
-                        <a class="navbar-brand" href="index.html">
+                        <a class="navbar-brand" href="/">
                             <img src="/images/logo/logo.svg" alt="Logo">
                         </a>
                         <!-- End Header Logo -->
@@ -502,7 +502,7 @@
                         <h4>Leave A Comment</h4>
                     </div>
                     <div class="mt-3">
-                        <form action="/products/product-detail/<%= id %>" method="post">
+                        <form action="/products/<%= id %>" method="post">
                             <div class="mb-3">
                                 <input type="text" class="form-control" placeholder="Your Name"  aria-describedby="emailHelp" name="custName">
                               </div>
